--- a/Config/trainer_config.yaml
+++ b/Config/trainer_config.yaml
@@ -23,7 +23,7 @@ behaviors:
         gamma: 0.99
         strength: 1.0
     keep_checkpoints: 5
-    max_steps: 2000000
+    max_steps: 200000
     time_horizon: 128
     summary_freq: 10000
     threaded: true
